--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -33,8 +33,7 @@
 
           <nav>
             <a href="https://researchweb.iiit.ac.in/~ameya.prabhu/documents/Resume.pdf">CV</a>
-            <a href="{{ site.baseurl }}/blog">Blog</a>
-            <a href="{{ site.baseurl }}/notes">Notes</a>
+            <a href="{{ site.baseurl }}/">Blog</a>
             <a href="{{ site.baseurl }}/about">About</a>
             <br>
             <br>
